# corax

./: .gitignore  README.md  pyproject.toml
src/corax/: connection.py  listener.py  main.py  server.py
src/corax/config/: logging.py
src/corax/errors/: request.py  socket.py
src/corax/handler/: base.py  static.py
src/corax/http/: enums.py  headers.py  parser.py  request.py  response.py  serializer.py
www/: index.html
