[project]
name = "corax"
version = "0.1.0"
description = ""
authors = [{ name = "mehdi", email = "mehdi7bs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{ include = "corax", from = "src" }]


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "corax.main:start"
dev = "corax.main:dev"

[tool.mypy]
disallow_untyped_defs = true
